@@ -1,24 +1,58 @@
+buildscript {
+    addRepos(repositories)
+    configurations.all {
+        resolutionStrategy {
+            // if build fails for a version conflict, do not remove this strategy:
+            // you can either:
+            // - change the wished version directly in the dep declaration if it's a first level dep
+            // - or force the version you want to use in case of transitive deps, by adding it below
+            // (buildscript dependencies tree can be seen with following command "gradle buildEnvironment")
+            failOnVersionConflict()
+
+            // check for updates every build, but only for changing dependencies
+            // ("-SNAPSHOT" are automatically considered changing, for others use "changing:true" flag on dep)
+            cacheChangingModulesFor 0, 'seconds'
+        }
+    }
+}
+
 plugins {
     id 'com.android.application'
-    id 'kotlin-kapt'
     id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
 
+ext {
+    //Keystore dynamic management
+    keystorePropertiesFile = rootProject.file("keystore.properties")
+    keystoreProperties = new Properties()
+    // Loads the keystore.properties file into the keystoreProperties object.
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.example.movieapp"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile rootProject.file(keystoreProperties["storeFile"])
+            storePassword keystoreProperties["storePassword"]
+            keyAlias keystoreProperties["release_keyAlias"]
+            keyPassword keystoreProperties["release_keyPassword"]
+        }
+    }
     buildTypes {
         debug {
-            minifyEnabled false
+            // minifyEnabled false
             buildConfigField "boolean", "ENABLE_DEBUG", "true"
             buildConfigField "String", "API_URL", API_URL
         }
@@ -26,6 +60,7 @@ android {
             minifyEnabled true
             buildConfigField "boolean", "ENABLE_DEBUG", "false"
             buildConfigField "String", "API_URL", API_URL
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -44,7 +79,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion kotlin_version
+        // kotlinCompilerVersion kotlin_version
     }
 }
 
@@ -70,7 +105,6 @@ dependencies {
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
@@ -110,11 +144,20 @@ dependencies {
     // Glide
     def version_glide = "4.12.0"
     implementation "com.github.bumptech.glide:glide:$version_glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$version_glide"
+    kapt "com.github.bumptech.glide:compiler:$version_glide"
 
     // Others
     implementation("com.github.pwittchen:reactivenetwork-rx2:3.0.8")
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
     implementation 'org.modelmapper:modelmapper:2.4.2'
+
+    // Compose
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
 }
+
+//tasks.withType( JavaCompile ).configureEach {
+//    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+//}
